# oj-eval-cursor-003-20251021141754

./: CMakeLists.txt  local_small.out
src/: main.cpp
